<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">你好，世界！</string>
    <string name="network_error">无法连接网络</string>
    <string name="app_name">太火鸟商城</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="pass">密码</string>
    <string name="code">验证码</string>
    <string name="input_code">输入手机验证码</string>
    <string name="fogot">重置密码</string>
    <string name="resendpass">重置密码</string>
    <string name="action_settings">设置</string>
    <string name="action_weibo_login">用新浪微博账号登录</string>
    <string name="action_qq_login">用腾讯QQ账号登录</string>
    <string name="action_phone_register">手机注册</string>
    <string name="home">首页</string>
    <string name="shop">商店</string>
    <string name="user">账户</string>
    <string name="cart">购物车</string>
    <string name="title_home">精选</string>
    <string name="title_shop">商店</string>
    <string name="title_user">我的账户</string>
    <string name="title_cart">购物车</string>
    <string name="title_default">太火鸟</string>
    <string name="title_activity_start">启动</string>
    <string name="title_product_list">商品分类</string>
    <string name="title_order">我的订单</string>
    <string name="title_subject">我的话题</string>
    <string name="title_favorite">我的收藏</string>
    <string name="title_message">消息</string>
    <string name="title_logout">退出账号</string>
    <string name="title_activity_logo">太火鸟商城</string>
    <string name="title_activity_user_info">个人资料</string>
    <string name="title_user_pic">头像</string>
    <string name="title_user_name">用户名</string>
    <string name="title_user_sex">性别</string>
    <string name="title_user_city">城市</string>
    <string name="title_user_address">收货地址</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_input_nickname">修改用户昵称</string>
    <string name="dialog_input_city">修改城市</string>
    <string name="title_activity_user_address">收货地址</string>
    <string name="warning_null_string">输入不能为空</string>
    <string name="add_address">添加地址</string>
    <string name="save_address">保存地址</string>
    <string name="title_activity_add_user_address">新建收货地址</string>
    <string name="realname">收货人姓名</string>
    <string name="mail_code">邮政编码</string>
    <string name="addr_zone">省、市、区</string>
    <string name="addr_strees">街道</string>
    <string name="addr_detail">详细地址</string>
    <string name="realname_">收货人：</string>
    <string name="addr_default">默认地址</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="title_activity_product_view">详情</string>
    <string name="view_product_detail">查看产品详情</string>
    <string name="skus">类型</string>
    <string name="num">数量</string>
    <string name="designer">设计者</string>
    <string name="collect">收藏</string>
    <string name="love">喜欢</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="buy">购买</string>
    <string name="title_activity_product_detail">商品详情</string>
    <string name="title_activity_shopping_order">确认订单</string>
    <string name="post_option">配送方式</string>
    <string name="free_post">免费配送</string>
    <string name="pay_option">支付方式</string>
    <string name="pay_online">在线支付</string>
    <string name="total_cost">总计：</string>
    <string name="confirm_order">确认订单</string>
    <string name="sku_mode">类型：</string>
    <string name="count">数量：</string>
    <string name="sku_mode_null">无</string>
    <string name="title_activity_shopping_confirm">支付订单</string>
    <string name="order_confirmed">订单已提交成功，请尽快付款</string>
    <string name="order_rid">订单号：</string>
    <string name="order_total_pay">应付金额：</string>
    <string name="order_payway">支付方式：</string>
    <string name="choose_payway">选择支付方式：</string>
    <string name="alipay_payway">支付宝客户端支付</string>
    <string name="pay_go">去支付</string>
    <string name="product_detail">产品详情</string>
    <string name="product_comment">用户评价</string>
    <string name="comment">评论</string>
    <string name="comment_something">  说点什么吧</string>
    <string name="product_faq">常见问题</string>
    <string name="title_activity_shopping_order_list">@string/title_order</string>
    <string name="orderAll">全部</string>
    <string name="unPayed">未支付</string>
    <string name="unRecv">待收货</string>
	<string name="unPayedStatus">等待付款</string>
	<string name="payNow">立即支付</string>
	<string name="cartCheckout">去结算</string>
	<string name="cancelOrder">取消订单</string>
	<string name="unRecvStatus">等待发货</string>
	<string name="delete">删除</string>
	<string name="faq_collect_title">收藏商品功能</string>
	<string name="faq_collect_text">点击“收藏按钮”后，按钮中填实颜色，代表收藏成功，再次点击取消收藏。您可在“账户”中的我的收藏查看所有收藏的商品。</string>
	<string name="faq_cancel_title">订单取消，怎样退款？</string>
	<string name="faq_cancel_text">订单取消时，您的支持金额将自动退款至【账户余额】中。您可以支持其他产品，或者在【申请取现】至你的支付宝或其他付款账户。</string>
	
</resources>
