<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"   
    android:background="@color/colorDividerLte"
    tools:context="com.taihuoniao.shop.fragment.ProductFAQFragment" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_text_size"
        android:text="@string/faq_collect_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"        
        android:textColor="@color/colorBlackLte"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/faq_collect_text" />
  	<View android:layout_width="match_parent"
  	    android:layout_height="1px"
        android:layout_marginTop="15dp"	    
  	    android:background="@color/colorGray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_text_size"
        android:text="@string/faq_cancel_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"        
        android:textColor="@color/colorBlackLte"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/faq_cancel_text" />
  	<View android:layout_width="match_parent"
  	    android:layout_height="1px"
        android:layout_marginTop="15dp"	    
  	    android:background="@color/colorGray"/>  	
  	
</LinearLayout>
