<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<RelativeLayout
	    android:paddingLeft="15dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:paddingRight="15dp"
	    android:background="@color/colorDivider"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	<TextView
	    android:id="@+id/ridTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/order_rid" 
	    />    
	<TextView
	    android:id="@+id/rid"
	    android:layout_toRightOf="@id/ridTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/order_rid" 
	    />	
	<TextView
	    android:id="@+id/realnameTitle"
	    android:layout_below="@id/ridTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/realname_" 
	    />    
	<TextView
	    android:id="@+id/realname"
	    android:layout_below="@id/ridTitle"
	    android:layout_toRightOf="@id/realnameTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/realname_" 
	    />	  
	<TextView
	    android:id="@+id/payStatus"
	    android:layout_below="@id/ridTitle"
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/unPayedStatus"
	    />
	</RelativeLayout>     
	<LinearLayout android:id="@+id/shopping_item_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	</LinearLayout>    
	<View 
	    android:background="@color/colorDivider"
	    android:layout_width="match_parent"
	    android:layout_height="1px"	    
	    />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right|center_vertical"
	    android:orientation="horizontal" >
	<Button android:id="@+id/payNow"
	    android:text="@string/payNow"
	    android:textSize="@dimen/normal_text_size"
	    android:background="@drawable/btn_round_rect_line_red"
	    android:layout_width="wrap_content"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:layout_margin="5dp"
	    android:layout_height="30dp"/>
	<Button android:id="@+id/cancelOrder"
	    android:text="@string/cancelOrder"
	    android:textSize="@dimen/normal_text_size"
	    android:background="@drawable/btn_round_rect_line"
	    android:layout_width="wrap_content"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"	    
	    android:layout_margin="5dp"
	    android:layout_height="30dp"/>	
	</LinearLayout> 
</LinearLayout>
