<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_logo"
    tools:context="com.taihuoniao.shop.activity.StartActivity" >
	<TextView android:id="@+id/text_log"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
    <Button
        android:id="@+id/weibo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/btn_weibo"
        android:textColor="@color/colorWhite"
        android:onClick="weibo"
        android:text="@string/action_weibo_login" />
    <Button
        android:id="@+id/qq"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
		android:layout_alignLeft="@id/weibo"
		android:layout_alignRight="@id/weibo"
		android:layout_below="@id/weibo"
		android:layout_marginTop="15dp"
        android:background="@drawable/btn_qq"
        android:textColor="@color/colorWhite"		
		android:onClick="qq"
        android:text="@string/action_qq_login" />   
    <Button
        android:id="@+id/login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
		android:layout_alignLeft="@id/qq"
		android:layout_alignRight="@id/qq"
		android:layout_below="@id/qq"
		android:layout_marginTop="15dp"
		android:background="@drawable/btn_login"
        android:textColor="@color/colorWhite"
		android:onClick="login"
        android:text="@string/login" /> 
    <Button
        android:id="@+id/register"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
		android:layout_alignLeft="@id/login"
		android:layout_alignRight="@id/login"
		android:layout_below="@id/login"
		android:layout_marginTop="15dp"
		android:background="@drawable/btn_register"
        android:textColor="@color/colorHighLightBtn"
		android:onClick="register"
        android:text="@string/action_phone_register" />                  

</RelativeLayout>
