<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhiteLte"
    android:divider="@drawable/div_line_h"
    android:dividerHeight="1px"
    android:showDividers="middle"
    tools:context="com.taihuoniao.shop.activity.AddUserAddressActivity" >
<LinearLayout 
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:text="@string/realname" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<EditText 
    android:id="@+id/realname"
    android:layout_marginLeft="20dp"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:textSize="@dimen/normal_text_size"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:layout_width="200dp"
    android:layout_height="25dp"
    android:maxLength="10"
    android:singleLine="true"
    />    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"    
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"    
    android:text="@string/phone" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<EditText 
    android:id="@+id/phone"
    android:layout_marginLeft="20dp"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:textSize="@dimen/normal_text_size"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"    
    android:layout_width="200dp"
    android:layout_height="25dp"
    android:maxLength="13"
    android:phoneNumber="true"
    android:singleLine="true"   
    />    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"    
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"   
    android:text="@string/mail_code" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<EditText 
    android:id="@+id/mail_code"
    android:layout_marginLeft="20dp"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:textSize="@dimen/normal_text_size"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:layout_width="200dp"
    android:layout_height="25dp"
    android:maxLength="9"
    android:numeric="decimal"
    android:singleLine="true"    
    />    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"   
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"    
    android:text="@string/addr_zone" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<Spinner 
    android:id="@+id/addr_province"
    android:layout_marginLeft="20dp"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:textSize="@dimen/normal_text_size"
    android:layout_width="200dp"
    android:layout_height="wrap_content"    
    />    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"    
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"    
    android:text="@string/addr_strees" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<Spinner 
    android:id="@+id/addr_city"
    android:layout_marginLeft="20dp"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:layout_height="wrap_content"    
    android:layout_width="200dp"
    android:textSize="@dimen/normal_text_size"
    />    
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"    
    android:orientation="horizontal"    
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"    
    android:text="@string/addr_detail" 
    android:textSize="@dimen/normal_text_size"
    />
<Space android:layout_width="1dp"
    android:layout_height="1dp"
    android:layout_weight="1"/>
<EditText 
    android:id="@+id/addr_detail"
    android:layout_marginLeft="20dp"
    android:textSize="@dimen/normal_text_size"
    android:background="@drawable/edit_text_null_bg"
    android:layout_gravity="center_vertical|right"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"    
    android:layout_width="200dp"
    android:layout_height="25dp"
    />    
</LinearLayout>
<CheckBox android:id="@+id/is_default"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/addr_default"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="15dp"     
    />
<Button
    android:id="@+id/save_addr"
    style="?android:attr/buttonStyleSmall"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:background="@drawable/btn_add_address"
    android:textColor="@color/colorHighLight"
    android:onClick="onSaveAddr"
    android:text="@string/save_address" />

</LinearLayout>
